--- a/hackathon_starter/hackathon/static/css/freelancer.css
+++ b/hackathon_starter/hackathon/static/css/freelancer.css
@@ -71,7 +71,8 @@ hr.star-primary:after {
 }
 header {
   text-align: center;
-  background: #18BC63;
+  background-image: url('/static/img/wp2.jpg');
+  background-size:100% 100%;
   color: white;
 }
 header .container {
