--- a/hackathon_starter/hackathon/templates/hackathon/index.html
+++ b/hackathon_starter/hackathon/templates/hackathon/index.html
@@ -77,7 +77,6 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="/static/img/nug.jpg" style="width:200px;height:200px;border-radius:200px" alt="">
                     <div class="intro-text">
                         <span class="name">Delivering the best prices<br>for cannabis since 2016</span>
                         <hr class="star-light">
@@ -432,7 +431,7 @@
                     </div>
                     <div class="footer-col col-md-4">
                         <h3 style="color:white;font-weight:100;letter-spacing:2px">About Us</h3>
-                        <p style="font-size:12px">BayTree Express is a San Francisco Bay Area and Southern California collective specializing in providing a safe, discreet and reliable delivery service to all qualified medical cannabis patients.
+                        <p style="font-size::;px">BayTree Express is a San Francisco Bay Area and Southern California collective specializing in providing a safe, discreet and reliable delivery service to all qualified medical cannabis patients.
 </p>
                     </div>
                 </div>
