--- a/hackathon_starter/hackathon/static/css/freelancer.css
+++ b/hackathon_starter/hackathon/static/css/freelancer.css
@@ -93,7 +93,7 @@ header .intro-text .name {
 }
 header .intro-text .skills {
   font-size: 1.25em;
-  font-weight: 300;
+  font-weight: 100;
 }
 @media (min-width: 768px) {
   header .container {
@@ -105,6 +105,9 @@ header .intro-text .skills {
   }
   header .intro-text .skills {
     font-size: 1.75em;
+    font-weight: 100;
+    letter-spacing: 2px;
+    font-family: "Helvetica Neue";
   }
 }
 .navbar-custom {
