--- a/hackathon_starter/hackathon/templates/hackathon/index.html
+++ b/hackathon_starter/hackathon/templates/hackathon/index.html
@@ -100,7 +100,7 @@
                     <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
-                                <span>${{item.gram.gram|jsonify}} per gram</span> <br>
+                                <span>${{item.gram.gram}} per gram</span> <br>
                             </div>
                         </div>
                         <center><h2 style="font-size:16px">{{item.name}}</h2></center>
@@ -123,7 +123,7 @@
                     <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
-                                <span>${{item.gram.gram|jsonify}} per gram</span> <br>
+                                <span>${{item.gram.gram}} per gram</span> <br>
                             </div>
                         </div>
                         <center><h2 style="font-size:16px">{{item.name}}</h2></center>
