--- a/hackathon_starter/hackathon/templates/hackathon/index.html
+++ b/hackathon_starter/hackathon/templates/hackathon/index.html
@@ -150,7 +150,7 @@
                                 <span>${{item.gram.gram}} per gram</span> <br>
                             </div>
                         </div>
-                        <center><h2 style="font-size:16px">White Fire OG</h2></center>
+                        <center><h2 style="font-size:16px">{{item.name}}</h2></center>
                         <img src="/static/img/portfolio/cabin.png" class="img-responsive" alt="">
                     </a>
                 </div>
