--- a/hackathon_starter/hackathon/templates/hackathon/index.html
+++ b/hackathon_starter/hackathon/templates/hackathon/index.html
@@ -47,21 +47,21 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
-                    <li class="hidden">
-                        <a href="#page-top"></a>
+                    <li class="page-scroll">
+                        <a href="#page-top">Top</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#portfolio">About</a>
+                        <a href="#portfolio">Menu</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#about">Register</a>
+                        <a href="#about">About</a>
                     </li>
-                    <li class="page-scroll">
-                        <a href="#contact">Shopping Cart</a>
-                    </li>                    
                     <li class="page-scroll">
                         <a href="#contact">Contact</a>
-                    </li>
+                    </li> 
+                    <li>
+                        <a href="#">Shopping Cart</a>
+                    </li>                                        
                 </ul>
             </div
             <!-- /.navbar-collapse -->
@@ -519,10 +519,10 @@
     </div>
 
     <!-- jQuery -->
-    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="/static/vendor/jquery/jquery.min.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+    <script src="/static/vendor/bootstrap/js/bootstrap.min.js"></script>
 
     <!-- Plugin JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
@@ -532,7 +532,7 @@
     <script src="/static/js/contact_me.js"></script>
 
     <!-- Theme JavaScript -->
-    <script src="/static/js/freelancer.min.js"></script>
+    <script src="/static/js/freelancer.js"></script>
 
 </body>
 
