--- a/hackathon_starter/hackathon/templates/hackathon/index.html
+++ b/hackathon_starter/hackathon/templates/hackathon/index.html
@@ -101,10 +101,11 @@
                         <div class="caption">
                             <div class="caption-content">
                                 <span>${{item.gram.gram}} per gram</span> <br>
+
                             </div>
                         </div>
                         <center><h2 style="font-size:16px">{{item.name}}</h2></center>
-                        <img src="/static/img/portfolio/cabin.png" class="img-responsive" alt="">
+                        <img src="/static/img/nug2.jpeg" class="img-responsive" alt="">
                     </a>
                 </div>
 {% endfor %}
@@ -127,7 +128,7 @@
                             </div>
                         </div>
                         <center><h2 style="font-size:16px">{{item.name}}</h2></center>
-                        <img src="/static/img/portfolio/cabin.png" class="img-responsive" alt="">
+                        <img src="/static/img/nug2.jpeg" class="img-responsive" alt="">
                     </a>
                 </div>
 {% endfor %}
@@ -151,7 +152,7 @@
                             </div>
                         </div>
                         <center><h2 style="font-size:16px">{{item.name}}</h2></center>
-                        <img src="/static/img/portfolio/cabin.png" class="img-responsive" alt="">
+                        <img src="/static/img/nug2.jpeg" class="img-responsive" alt="">
                     </a>
                 </div>
 {% endfor %}
@@ -307,7 +308,7 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>OG Dank</h2>
                             <hr class="star-primary">
                             <img src="/static/img/portfolio/cabin.png" class="img-responsive img-centered" alt="">
                             <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
