--- a/hackathon_starter/hackathon/static/css/freelancer.css
+++ b/hackathon_starter/hackathon/static/css/freelancer.css
@@ -195,7 +195,7 @@ section h2 {
   font-size: 3em;
 }
 section.success {
-  background: #18BC9C;
+  background: #18BC63;
   color: white;
 }
 @media (max-width: 767px) {
