--- a/hackathon_starter/hackathon/templates/hackathon/index.html
+++ b/hackathon_starter/hackathon/templates/hackathon/index.html
@@ -105,7 +105,7 @@
                             </div>
                         </div>
                         <center><h2 style="font-size:16px">{{item.name}}</h2></center>
-                        <img src="/static/img/nug2.jpeg" class="img-responsive" alt="">
+                        <img src="/static/img/nug3.jpg" class="img-responsive" alt="">
                     </a>
                 </div>
 {% endfor %}
@@ -128,7 +128,7 @@
                             </div>
                         </div>
                         <center><h2 style="font-size:16px">{{item.name}}</h2></center>
-                        <img src="/static/img/nug2.jpeg" class="img-responsive" alt="">
+                        <img src="/static/img/nug3.jpg" class="img-responsive" alt="">
                     </a>
                 </div>
 {% endfor %}
@@ -152,7 +152,7 @@
                             </div>
                         </div>
                         <center><h2 style="font-size:16px">{{item.name}}</h2></center>
-                        <img src="/static/img/nug2.jpeg" class="img-responsive" alt="">
+                        <img src="/static/img/nug3.jpg" class="img-responsive" alt="">
                     </a>
                 </div>
 {% endfor %}
