--- a/hackathon_starter/hackathon/templates/hackathon/index.html
+++ b/hackathon_starter/hackathon/templates/hackathon/index.html
@@ -166,7 +166,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 style="color:white;font-weight:100;letter-spacing:2px">About</h2>
-                    <hr class="star-light">
+                    <hr>
                 </div>
             </div>
             <div class="row" style="font-weight:100;letter-spacing:2px">
@@ -310,9 +310,9 @@
                         <div class="modal-body">
                             <h2>OG Dank</h2>
                             <hr class="star-primary">
-                            <img src="/static/img/portfolio/cabin.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
-                            <ul class="list-inline item-details">
+                            <img src="/static/img/nug.jpg" class="img-responsive img-centered" alt="">
+                            <p>hella dank</p>
+                            <ul class="list-inline item-details" style="display:none">
                                 <li>Client:
                                     <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
                                     </strong>
