--- a/hackathon_starter/hackathon/templates/hackathon/index.html
+++ b/hackathon_starter/hackathon/templates/hackathon/index.html
@@ -97,7 +97,7 @@
                     <div class="intro-text">
                         <span class="name">Delivering the best prices<br>for cannabis since 2016</span>
   <hr>
-                        <span class="skills">Ask about our 75$ ounces and 4.6 gram eighths</span><br>
+                        <span class="skills">Ask about our 30 gram ounces for 75$ and 4.6 gram eighths</span><br>
                         <span class="skills">BayTree Express </span>
                     </div>
                 </div>
@@ -114,10 +114,18 @@
                     <hr style="border-color:black">
                 </div>
             </div>
+<script>
+function select_nug(name,gram) {
+  console.log(name)
+  console.log(gram)
+    $("#selected_nug_title")[0].innerText = String(name)
+    $("#select_nug_gram")[0].innerText = String("$ "+gram)
+}
+</script>
             <div class="row">
 {% for item in indicas %}
                 <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
+                    <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal" onClick="select_nug('{{item.name}}','{{item.gram.gram}}')">
                         <div class="caption">
                             <div class="caption-content">
                                 <span>${{item.gram.gram}} per gram</span> <br>
@@ -125,13 +133,13 @@
                             </div>
                         </div>
                         <center><h2 style="font-size:16px">{{item.name}}</h2></center>
-                        <img src="/static/img/nug3.jpg" class="img-responsive" alt="">
+                        <img src="/static/img/{{item.img}}.jpg" class="img-responsive" alt="">
                     </a>
                 </div>
 {% endfor %}
                 
         </div>
-   <div class="container">k
+   <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>Hybrid</h2>
@@ -148,7 +156,7 @@
                             </div>
                         </div>
                         <center><h2 style="font-size:16px">{{item.name}}</h2></center>
-                        <img src="/static/img/nug3.jpg" class="img-responsive" alt="">
+                        <img src="/static/img/{{item.img}}.jpg" class="img-responsive" alt="">
                     </a>
                 </div>
 {% endfor %}
@@ -172,7 +180,7 @@
                             </div>
                         </div>
                         <center><h2 style="font-size:16px">{{item.name}}</h2></center>
-                        <img src="/static/img/nug3.jpg" class="img-responsive" alt="">
+                        <img src="/static/img/{{item.img}}.jpg" class="img-responsive" alt="">
                     </a>
                 </div>
 {% endfor %}
@@ -333,12 +341,28 @@
                             <div class="row">
                               <div class="col-md-6" style="height:50vh">
                                 <img src="/static/img/nug.jpg" class="img-responsive img-centered" alt="">
-                                <p>hella dank</p>
                               </div>
                               <div class="col-md-6"  style="height:50vh">
-                                <center>
-                                  Indica 
+                                <center style="font-size:24px">
+
+
+
+
+              <div class="row" style="border-bottom:1px solid black">
+                <div class="col-md-1">
+                  <input type="checkbox" aria-label="...">
+                </div>
+                <div class="col-md-5" style="text-align:left" id="select_nug_gram">5$</div>
+                <div class="col-md-5">for 1.2 grams</div>
+              </div>
+
+
+
+                                  
                                   <br>
+                                  or
+                                  <br>
+                                  Mix and Match<br> 4 strains for a 4.6g eighth
 
                                 </center>
                               </div>
@@ -534,7 +558,7 @@
             </div>
         </div>
     </div>
-
+{% block scripts %}
     <!-- jQuery -->
     <script src="/static/vendor/jquery/jquery.min.js"></script>
 
@@ -550,7 +574,7 @@
 
     <!-- Theme JavaScript -->
     <script src="/static/js/freelancer.js"></script>
-
+{% endblock %}
 </body>
 
 </html>
