--- a/hackathon_starter/hackathon/templates/hackathon/index.html
+++ b/hackathon_starter/hackathon/templates/hackathon/index.html
@@ -169,7 +169,7 @@ function register() {
             <div class="row">
                 <div class="col-lg-12">
                     <div class="intro-text">
-                        <span class="name" style="font-size:3px">Delivering the best prices <br> on cannabis since 2016</span>
+                        <span class="name">Delivering the best prices <br> on cannabis since 2016</span>
   <hr>
                         <span class="skills">Ask about our 30 gram ounces for 75$ and 4.6 gram eighths</span><br>
                         <span class="skills">BayTree Express </span>
