--- a/hackathon_starter/hackathon/templates/hackathon/index.html
+++ b/hackathon_starter/hackathon/templates/hackathon/index.html
@@ -208,7 +208,7 @@ function select_nug(name,gram,url) {
                             </div>
                         </div>
                         <center><h2 style="font-size:16px">{{item.name}}</h2></center>
-                        <img src="/static/img/{{item.img}}.jpg" class="img-responsive" alt="" style="width:300px;height:200px">
+                        <img src="/static/img/{{item.img}}.jpg" class="img-responsive" alt="" style="width:100%;height:100%">
                     </a>
                 </div>
 {% endfor %}
